# NeuroGhost

./: Procfile  README.md  index.html  pyproject.toml  railway.toml  requirements.txt  server.json  smithery.yaml
.github/workflows/: publish_registry.yml  schema_submission.yml  tests.yml
data/: embeddings.parquet  provenance.json
data/versions/: 1.4.0.json  1.8.0.json  1.9.0.json  1.9.1.json  1.9.2.json  1.9.3.json
docs/: ingestion.md
neuro_ghost/: __main__.py  align.py  db.py  export_json.py  ingest_linkml.py  mcp_server.py  pipeline.py  seed.py  validate_schema.py
neuro_ghost/converters/: bbqs.py  bids.py  dandi.py  openminds.py  run_all.py
neuro_registry/: align.py  export_json.py  schema_org_seed.py  schema_registry.py
schema_registry_utils/: __init__.py  hashing.py  models.py
schemas/: meta_model.yaml
tests/: conftest.py  test_ingest_linkml.py  test_ingest_registry.py  test_validate_schema.py
tests/fixtures/: comprehensive.yml  hierarchy.yml  invalid_undefined_slot.yml  required_a.yml  required_b.yml  source_a.yml  source_b.yml  valid_attributes.yml  valid_slots.yml
